@@ -5,6 +5,8 @@
  *
  *	This file is part of JOE (Joe's Own Editor)
  */
+#include <stdio.h>
+
 #include "config.h"
 #include "types.h"
 
@@ -135,7 +137,7 @@ int utf8_decode(struct utf8_sm *utf8_sm,unsigned char c)
 		/* 128 - 191, 254, 255 */
 		utf8_sm->ptr = 0;
 		utf8_sm->state = 0;
-		return c;
+		return -3;
 	}
 	return -1;
 }
@@ -217,15 +219,20 @@ void to_utf8(unsigned char *s,int c)
 {
 #ifdef HAVE_SETLOCALE
 	unsigned char buf[10];
-	unsigned char *bp;
+	unsigned char *ibufp = buf;
+	unsigned char *obufp = s;
 	int ibuf_sz=1;
 	int obuf_sz= 10;
 	buf[0]=c;
 	buf[1]=0;
-	bp = buf;
 
-	iconv(to_utf,(char **)&bp,&ibuf_sz,(char **)&s,&obuf_sz);
-	*s = 0;
+	if (to_utf==(iconv_t)-1 ||
+	    iconv(to_utf,(char **)&ibufp,&ibuf_sz,(char **)&obufp,&obuf_sz)==(size_t)-1) {
+		s[0]='?';
+		s[1]=0;
+	} else {
+		*obufp = 0;
+	}
 #else
 	utf8_encode(s,c);
 #endif
@@ -234,15 +241,18 @@ void to_utf8(unsigned char *s,int c)
 int from_utf8(unsigned char *s)
 {
 #ifdef HAVE_SETLOCALE
-	int ibuf_sz=10;
+	int ibuf_sz=strlen(s);
 	unsigned char *ibufp=s;
-	
 	int obuf_sz=10;
 	unsigned char obuf[10];
 	unsigned char *obufp = obuf;
 
-	iconv(from_utf,(char **)&s,&ibuf_sz,(char **)&obufp,&obuf_sz);
-	return obuf[0];
+
+	if (from_utf==(iconv_t)-1 ||
+	    iconv(from_utf,(char **)&ibufp,&ibuf_sz,(char **)&obufp,&obuf_sz)==((size_t)-1))
+		return '?';
+	else
+		return obuf[0];
 #else
 	return utf8_decode_string(s);
 #endif
@@ -408,9 +418,14 @@ static int bisearch(int ucs, const struct interval *table, int max)
 /* Modified for JOE: returns printed width of control and other non-printable
    characters */
 
-int mk_wcwidth(int ucs)
+int mk_wcwidth(int wide,int ucs)
 {
 	int x;
+
+	/* If terminal is not UTF-8 or file is not UTF-8: width is 1 */
+	if (!utf8 || !wide)
+		return 1;
+
 	/* sorted list of non-overlapping intervals of non-spacing characters */
 	/* generated by "uniset +cat=Me +cat=Mn +cat=Cf -00AD +1160-11FF +200B c" */
 	static const struct interval combining[] = {
